--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,8 @@
   height: 100vh;
   /* display: flex; */
   color: white;
+
+  font-family: 'Trebuchet MS', sans-serif;
 }
 
 body {
@@ -23,7 +25,7 @@ nav {
 
 nav h1 {
   margin: 0;
-  font-family: Helvetica, Arial, sans-serif;
+  /* font-family: Helvetica, Arial, sans-serif; */
   color: white;
   font-size: 45px;
 }
@@ -32,23 +34,27 @@ nav h1 {
   height: calc(100vh - 170px);
   display: flex;
   align-items: center;
+  justify-content: space-between;
   padding-top: 50px;
   flex-direction: column;
 }
 
 .board {
-  width: 450px;
-  height: 550px;
-  border: 1px solid black;
+  max-width: 350px;
+  min-width: 350px;
+  width:18%;
+  height: 50%;
+  /* border: 1px solid black; */
   display: flex;
   flex-direction: column;
 }
 
 .row {
-  flex: 33%;
+  /* flex: 16.5%; */
   display: flex;
   flex-direction: row;
   margin: 5px;
+  min-height: 55px;
 }
 
 .letter {
@@ -58,7 +64,7 @@ nav h1 {
   margin: 5px;
   display: grid;
   place-items: center;
-  font-size: 30px;
+  font-size: 20px;
   font-weight: bolder;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
@@ -77,9 +83,12 @@ nav h1 {
 }
 
 .keyboard {
-  width: 700px;
-  height: 300px;
-  margin-top: 60px;
+  height: 30%;
+  display: flex;
+  flex-direction: column;
+  /* width: 700px;
+  height: 300px; */
+  margin-top: 1rem;
 }
 
 .line1 {
@@ -107,12 +116,12 @@ nav h1 {
 
 .key {
   width: 50px;
-  height: 70px;
-  margin: 5px;
+  height: 60px;
+  margin: 3px;
   border-radius: 4px;
   display: grid;
   place-items: center;
-  font-size: 20px;
+  font-size: 18px;
   background-color: grey;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
@@ -120,7 +129,7 @@ nav h1 {
 }
 
 #big {
-  width: 100px;
+  width: 90px;
 }
 #disabled {
   background-color: #3a393c;
